stderr
   Compiling hiker v0.1.0 (/sandbox)
error[E0425]: cannot find function `parse_roll` in this scope
  --> src/lib.rs:10:26
   |
10 |         let first_roll = parse_roll(frame.chars().nth(0).unwrap());
   |                          ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `parse_roll` in this scope
  --> src/lib.rs:11:27
   |
11 |         let second_roll = parse_roll(frame.chars().nth(1).unwrap_or('0'));
   |                           ^^^^^^^^^^ help: a local variable with a similar name exists: `first_roll`

error[E0425]: cannot find function `bonus_for_spare` in this scope
  --> src/lib.rs:16:28
   |
16 |             total_score += bonus_for_spare(&frames, frame_index);
   |                            ^^^^^^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
  --> src/lib.rs:20:5
   |
3  | pub fn answer(score_str: &str) -> &str {
   |                                   ---- expected `&str` because of return type
...
20 |     total_score
   |     ^^^^^^^^^^^ expected `&str`, found integer

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `hiker` (lib) due to 4 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `hiker` (lib test) due to 4 previous errors
